// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductList should match the default snapshot: default 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ProductList
    getProducts={
      [MockFunction] {
        "calls": Array [
          Array [],
        ],
        "results": Array [
          Object {
            "isThrow": false,
            "value": undefined,
          },
        ],
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <h1
        className="product-list--no-products-notice"
      >
        "No products were found"
      </h1>,
      "className": "product-list--container",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": "\\"No products were found\\"",
        "className": "product-list--no-products-notice",
      },
      "ref": null,
      "rendered": "\\"No products were found\\"",
      "type": "h1",
    },
    "type": "section",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <h1
          className="product-list--no-products-notice"
        >
          "No products were found"
        </h1>,
        "className": "product-list--container",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "\\"No products were found\\"",
          "className": "product-list--no-products-notice",
        },
        "ref": null,
        "rendered": "\\"No products were found\\"",
        "type": "h1",
      },
      "type": "section",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`ProductList should match the error snapshot: error 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ProductList
    error={
      Object {
        "error": "test",
      }
    }
    getProducts={
      [MockFunction] {
        "calls": Array [
          Array [],
        ],
        "results": Array [
          Object {
            "isThrow": false,
            "value": undefined,
          },
        ],
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <ErrorNotice />,
      "className": "product-list--container",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {},
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
    "type": "section",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <ErrorNotice />,
        "className": "product-list--container",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {},
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      "type": "section",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`ProductList should match the loading snapshot: loading 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ProductList
    getProducts={
      [MockFunction] {
        "calls": Array [
          Array [],
        ],
        "results": Array [
          Object {
            "isThrow": false,
            "value": undefined,
          },
        ],
      }
    }
    isLoading={true}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <LoadingNotice />,
      "className": "product-list--container",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {},
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
    "type": "section",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <LoadingNotice />,
        "className": "product-list--container",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {},
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      "type": "section",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`ProductList should match the product results snapshot: results 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ProductList
    getProducts={
      [MockFunction] {
        "calls": Array [
          Array [],
        ],
        "results": Array [
          Object {
            "isThrow": false,
            "value": undefined,
          },
        ],
      }
    }
    productCollection={
      Array [
        Object {
          "CardShopId": 1,
          "DefaultSizeId": 1,
          "DirectSmile": true,
          "IsCustomisable": 1,
          "IsLandscape": 0,
          "IsMultipack": 0,
          "MoonpigProductNo": "ll037",
          "PhotoUploadCount": 0,
          "Price": Object {
            "Currency": "£",
            "Value": 3.29,
          },
          "ProductCategory": Object {
            "Name": "greeting cards",
            "ProductCategoryId": 1,
          },
          "ProductCategoryGroupSeoPath": "personalised-cards/",
          "ProductId": 17715,
          "ProductImage": Object {
            "Link": Object {
              "Href": "https://d1xkhapf8f3lxw.cloudfront.net/api/images/CardShop/1/product/ll037",
              "Method": "GET",
              "Rel": "self",
              "Title": "17715",
            },
            "MimeType": "image/jpeg",
          },
          "ProductLink": Object {
            "Href": "https://api-rest.moonpig.com/v2/products/ll037/1",
            "Method": "GET",
            "Rel": "self",
            "Title": "17715",
          },
          "Reviews": Object {
            "AverageStarReviewRating": 4.7561,
            "MaxReviewData": 0,
            "MinReviewData": 0,
            "ReviewCount": 41,
          },
          "SeoPath": "champagne-bottle-personalised-congratulations-card",
          "ShortDescription": null,
          "SoldOut": 0,
          "Title": "Champagne Bottle Personalised Congratulations Card",
          "TradingFaces": 0,
        },
        Object {
          "CardShopId": 39,
          "DefaultSizeId": 1,
          "DirectSmile": true,
          "IsCustomisable": 1,
          "IsLandscape": 1,
          "IsMultipack": 0,
          "MoonpigProductNo": "ll1064",
          "PhotoUploadCount": 0,
          "Price": Object {
            "Currency": "$",
            "Value": 6.59,
          },
          "ProductCategory": Object {
            "Name": "greeting cards",
            "ProductCategoryId": 1,
          },
          "ProductCategoryGroupSeoPath": "personalised-cards/",
          "ProductId": 51500,
          "ProductImage": Object {
            "Link": Object {
              "Href": "https://d1xkhapf8f3lxw.cloudfront.net/api/images/CardShop/39/product/ll1064",
              "Method": "GET",
              "Rel": "self",
              "Title": "51500",
            },
            "MimeType": "image/jpeg",
          },
          "ProductLink": Object {
            "Href": "https://api-rest.moonpig.com/v2/products/ll1064/1",
            "Method": "GET",
            "Rel": "self",
            "Title": "51500",
          },
          "Reviews": Object {
            "AverageStarReviewRating": 4.9167,
            "MaxReviewData": 0,
            "MinReviewData": 0,
            "ReviewCount": 12,
          },
          "SeoPath": "grapes-and-personalised-champagne-well-done-card",
          "ShortDescription": null,
          "SoldOut": 0,
          "Title": "Grapes And Personalised Champagne Well Done Card",
          "TradingFaces": 0,
        },
      ]
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="product-list--item"
        >
          <Link
            replace={false}
            to="/details/ll037"
          >
            <ProductSummary
              product={
                Object {
                  "CardShopId": 1,
                  "DefaultSizeId": 1,
                  "DirectSmile": true,
                  "IsCustomisable": 1,
                  "IsLandscape": 0,
                  "IsMultipack": 0,
                  "MoonpigProductNo": "ll037",
                  "PhotoUploadCount": 0,
                  "Price": Object {
                    "Currency": "£",
                    "Value": 3.29,
                  },
                  "ProductCategory": Object {
                    "Name": "greeting cards",
                    "ProductCategoryId": 1,
                  },
                  "ProductCategoryGroupSeoPath": "personalised-cards/",
                  "ProductId": 17715,
                  "ProductImage": Object {
                    "Link": Object {
                      "Href": "https://d1xkhapf8f3lxw.cloudfront.net/api/images/CardShop/1/product/ll037",
                      "Method": "GET",
                      "Rel": "self",
                      "Title": "17715",
                    },
                    "MimeType": "image/jpeg",
                  },
                  "ProductLink": Object {
                    "Href": "https://api-rest.moonpig.com/v2/products/ll037/1",
                    "Method": "GET",
                    "Rel": "self",
                    "Title": "17715",
                  },
                  "Reviews": Object {
                    "AverageStarReviewRating": 4.7561,
                    "MaxReviewData": 0,
                    "MinReviewData": 0,
                    "ReviewCount": 41,
                  },
                  "SeoPath": "champagne-bottle-personalised-congratulations-card",
                  "ShortDescription": null,
                  "SoldOut": 0,
                  "Title": "Champagne Bottle Personalised Congratulations Card",
                  "TradingFaces": 0,
                }
              }
            />
          </Link>
        </div>,
        <div
          className="product-list--item"
        >
          <Link
            replace={false}
            to="/details/ll1064"
          >
            <ProductSummary
              product={
                Object {
                  "CardShopId": 39,
                  "DefaultSizeId": 1,
                  "DirectSmile": true,
                  "IsCustomisable": 1,
                  "IsLandscape": 1,
                  "IsMultipack": 0,
                  "MoonpigProductNo": "ll1064",
                  "PhotoUploadCount": 0,
                  "Price": Object {
                    "Currency": "$",
                    "Value": 6.59,
                  },
                  "ProductCategory": Object {
                    "Name": "greeting cards",
                    "ProductCategoryId": 1,
                  },
                  "ProductCategoryGroupSeoPath": "personalised-cards/",
                  "ProductId": 51500,
                  "ProductImage": Object {
                    "Link": Object {
                      "Href": "https://d1xkhapf8f3lxw.cloudfront.net/api/images/CardShop/39/product/ll1064",
                      "Method": "GET",
                      "Rel": "self",
                      "Title": "51500",
                    },
                    "MimeType": "image/jpeg",
                  },
                  "ProductLink": Object {
                    "Href": "https://api-rest.moonpig.com/v2/products/ll1064/1",
                    "Method": "GET",
                    "Rel": "self",
                    "Title": "51500",
                  },
                  "Reviews": Object {
                    "AverageStarReviewRating": 4.9167,
                    "MaxReviewData": 0,
                    "MinReviewData": 0,
                    "ReviewCount": 12,
                  },
                  "SeoPath": "grapes-and-personalised-champagne-well-done-card",
                  "ShortDescription": null,
                  "SoldOut": 0,
                  "Title": "Grapes And Personalised Champagne Well Done Card",
                  "TradingFaces": 0,
                }
              }
            />
          </Link>
        </div>,
      ],
      "className": "product-list--container",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": "ll037",
        "nodeType": "host",
        "props": Object {
          "children": <Link
            replace={false}
            to="/details/ll037"
          >
            <ProductSummary
              product={
                Object {
                  "CardShopId": 1,
                  "DefaultSizeId": 1,
                  "DirectSmile": true,
                  "IsCustomisable": 1,
                  "IsLandscape": 0,
                  "IsMultipack": 0,
                  "MoonpigProductNo": "ll037",
                  "PhotoUploadCount": 0,
                  "Price": Object {
                    "Currency": "£",
                    "Value": 3.29,
                  },
                  "ProductCategory": Object {
                    "Name": "greeting cards",
                    "ProductCategoryId": 1,
                  },
                  "ProductCategoryGroupSeoPath": "personalised-cards/",
                  "ProductId": 17715,
                  "ProductImage": Object {
                    "Link": Object {
                      "Href": "https://d1xkhapf8f3lxw.cloudfront.net/api/images/CardShop/1/product/ll037",
                      "Method": "GET",
                      "Rel": "self",
                      "Title": "17715",
                    },
                    "MimeType": "image/jpeg",
                  },
                  "ProductLink": Object {
                    "Href": "https://api-rest.moonpig.com/v2/products/ll037/1",
                    "Method": "GET",
                    "Rel": "self",
                    "Title": "17715",
                  },
                  "Reviews": Object {
                    "AverageStarReviewRating": 4.7561,
                    "MaxReviewData": 0,
                    "MinReviewData": 0,
                    "ReviewCount": 41,
                  },
                  "SeoPath": "champagne-bottle-personalised-congratulations-card",
                  "ShortDescription": null,
                  "SoldOut": 0,
                  "Title": "Champagne Bottle Personalised Congratulations Card",
                  "TradingFaces": 0,
                }
              }
            />
          </Link>,
          "className": "product-list--item",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <ProductSummary
              product={
                Object {
                  "CardShopId": 1,
                  "DefaultSizeId": 1,
                  "DirectSmile": true,
                  "IsCustomisable": 1,
                  "IsLandscape": 0,
                  "IsMultipack": 0,
                  "MoonpigProductNo": "ll037",
                  "PhotoUploadCount": 0,
                  "Price": Object {
                    "Currency": "£",
                    "Value": 3.29,
                  },
                  "ProductCategory": Object {
                    "Name": "greeting cards",
                    "ProductCategoryId": 1,
                  },
                  "ProductCategoryGroupSeoPath": "personalised-cards/",
                  "ProductId": 17715,
                  "ProductImage": Object {
                    "Link": Object {
                      "Href": "https://d1xkhapf8f3lxw.cloudfront.net/api/images/CardShop/1/product/ll037",
                      "Method": "GET",
                      "Rel": "self",
                      "Title": "17715",
                    },
                    "MimeType": "image/jpeg",
                  },
                  "ProductLink": Object {
                    "Href": "https://api-rest.moonpig.com/v2/products/ll037/1",
                    "Method": "GET",
                    "Rel": "self",
                    "Title": "17715",
                  },
                  "Reviews": Object {
                    "AverageStarReviewRating": 4.7561,
                    "MaxReviewData": 0,
                    "MinReviewData": 0,
                    "ReviewCount": 41,
                  },
                  "SeoPath": "champagne-bottle-personalised-congratulations-card",
                  "ShortDescription": null,
                  "SoldOut": 0,
                  "Title": "Champagne Bottle Personalised Congratulations Card",
                  "TradingFaces": 0,
                }
              }
            />,
            "replace": false,
            "to": "/details/ll037",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "product": Object {
                "CardShopId": 1,
                "DefaultSizeId": 1,
                "DirectSmile": true,
                "IsCustomisable": 1,
                "IsLandscape": 0,
                "IsMultipack": 0,
                "MoonpigProductNo": "ll037",
                "PhotoUploadCount": 0,
                "Price": Object {
                  "Currency": "£",
                  "Value": 3.29,
                },
                "ProductCategory": Object {
                  "Name": "greeting cards",
                  "ProductCategoryId": 1,
                },
                "ProductCategoryGroupSeoPath": "personalised-cards/",
                "ProductId": 17715,
                "ProductImage": Object {
                  "Link": Object {
                    "Href": "https://d1xkhapf8f3lxw.cloudfront.net/api/images/CardShop/1/product/ll037",
                    "Method": "GET",
                    "Rel": "self",
                    "Title": "17715",
                  },
                  "MimeType": "image/jpeg",
                },
                "ProductLink": Object {
                  "Href": "https://api-rest.moonpig.com/v2/products/ll037/1",
                  "Method": "GET",
                  "Rel": "self",
                  "Title": "17715",
                },
                "Reviews": Object {
                  "AverageStarReviewRating": 4.7561,
                  "MaxReviewData": 0,
                  "MinReviewData": 0,
                  "ReviewCount": 41,
                },
                "SeoPath": "champagne-bottle-personalised-congratulations-card",
                "ShortDescription": null,
                "SoldOut": 0,
                "Title": "Champagne Bottle Personalised Congratulations Card",
                "TradingFaces": 0,
              },
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        "type": "div",
      },
      Object {
        "instance": null,
        "key": "ll1064",
        "nodeType": "host",
        "props": Object {
          "children": <Link
            replace={false}
            to="/details/ll1064"
          >
            <ProductSummary
              product={
                Object {
                  "CardShopId": 39,
                  "DefaultSizeId": 1,
                  "DirectSmile": true,
                  "IsCustomisable": 1,
                  "IsLandscape": 1,
                  "IsMultipack": 0,
                  "MoonpigProductNo": "ll1064",
                  "PhotoUploadCount": 0,
                  "Price": Object {
                    "Currency": "$",
                    "Value": 6.59,
                  },
                  "ProductCategory": Object {
                    "Name": "greeting cards",
                    "ProductCategoryId": 1,
                  },
                  "ProductCategoryGroupSeoPath": "personalised-cards/",
                  "ProductId": 51500,
                  "ProductImage": Object {
                    "Link": Object {
                      "Href": "https://d1xkhapf8f3lxw.cloudfront.net/api/images/CardShop/39/product/ll1064",
                      "Method": "GET",
                      "Rel": "self",
                      "Title": "51500",
                    },
                    "MimeType": "image/jpeg",
                  },
                  "ProductLink": Object {
                    "Href": "https://api-rest.moonpig.com/v2/products/ll1064/1",
                    "Method": "GET",
                    "Rel": "self",
                    "Title": "51500",
                  },
                  "Reviews": Object {
                    "AverageStarReviewRating": 4.9167,
                    "MaxReviewData": 0,
                    "MinReviewData": 0,
                    "ReviewCount": 12,
                  },
                  "SeoPath": "grapes-and-personalised-champagne-well-done-card",
                  "ShortDescription": null,
                  "SoldOut": 0,
                  "Title": "Grapes And Personalised Champagne Well Done Card",
                  "TradingFaces": 0,
                }
              }
            />
          </Link>,
          "className": "product-list--item",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <ProductSummary
              product={
                Object {
                  "CardShopId": 39,
                  "DefaultSizeId": 1,
                  "DirectSmile": true,
                  "IsCustomisable": 1,
                  "IsLandscape": 1,
                  "IsMultipack": 0,
                  "MoonpigProductNo": "ll1064",
                  "PhotoUploadCount": 0,
                  "Price": Object {
                    "Currency": "$",
                    "Value": 6.59,
                  },
                  "ProductCategory": Object {
                    "Name": "greeting cards",
                    "ProductCategoryId": 1,
                  },
                  "ProductCategoryGroupSeoPath": "personalised-cards/",
                  "ProductId": 51500,
                  "ProductImage": Object {
                    "Link": Object {
                      "Href": "https://d1xkhapf8f3lxw.cloudfront.net/api/images/CardShop/39/product/ll1064",
                      "Method": "GET",
                      "Rel": "self",
                      "Title": "51500",
                    },
                    "MimeType": "image/jpeg",
                  },
                  "ProductLink": Object {
                    "Href": "https://api-rest.moonpig.com/v2/products/ll1064/1",
                    "Method": "GET",
                    "Rel": "self",
                    "Title": "51500",
                  },
                  "Reviews": Object {
                    "AverageStarReviewRating": 4.9167,
                    "MaxReviewData": 0,
                    "MinReviewData": 0,
                    "ReviewCount": 12,
                  },
                  "SeoPath": "grapes-and-personalised-champagne-well-done-card",
                  "ShortDescription": null,
                  "SoldOut": 0,
                  "Title": "Grapes And Personalised Champagne Well Done Card",
                  "TradingFaces": 0,
                }
              }
            />,
            "replace": false,
            "to": "/details/ll1064",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "product": Object {
                "CardShopId": 39,
                "DefaultSizeId": 1,
                "DirectSmile": true,
                "IsCustomisable": 1,
                "IsLandscape": 1,
                "IsMultipack": 0,
                "MoonpigProductNo": "ll1064",
                "PhotoUploadCount": 0,
                "Price": Object {
                  "Currency": "$",
                  "Value": 6.59,
                },
                "ProductCategory": Object {
                  "Name": "greeting cards",
                  "ProductCategoryId": 1,
                },
                "ProductCategoryGroupSeoPath": "personalised-cards/",
                "ProductId": 51500,
                "ProductImage": Object {
                  "Link": Object {
                    "Href": "https://d1xkhapf8f3lxw.cloudfront.net/api/images/CardShop/39/product/ll1064",
                    "Method": "GET",
                    "Rel": "self",
                    "Title": "51500",
                  },
                  "MimeType": "image/jpeg",
                },
                "ProductLink": Object {
                  "Href": "https://api-rest.moonpig.com/v2/products/ll1064/1",
                  "Method": "GET",
                  "Rel": "self",
                  "Title": "51500",
                },
                "Reviews": Object {
                  "AverageStarReviewRating": 4.9167,
                  "MaxReviewData": 0,
                  "MinReviewData": 0,
                  "ReviewCount": 12,
                },
                "SeoPath": "grapes-and-personalised-champagne-well-done-card",
                "ShortDescription": null,
                "SoldOut": 0,
                "Title": "Grapes And Personalised Champagne Well Done Card",
                "TradingFaces": 0,
              },
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        "type": "div",
      },
    ],
    "type": "section",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="product-list--item"
          >
            <Link
              replace={false}
              to="/details/ll037"
            >
              <ProductSummary
                product={
                  Object {
                    "CardShopId": 1,
                    "DefaultSizeId": 1,
                    "DirectSmile": true,
                    "IsCustomisable": 1,
                    "IsLandscape": 0,
                    "IsMultipack": 0,
                    "MoonpigProductNo": "ll037",
                    "PhotoUploadCount": 0,
                    "Price": Object {
                      "Currency": "£",
                      "Value": 3.29,
                    },
                    "ProductCategory": Object {
                      "Name": "greeting cards",
                      "ProductCategoryId": 1,
                    },
                    "ProductCategoryGroupSeoPath": "personalised-cards/",
                    "ProductId": 17715,
                    "ProductImage": Object {
                      "Link": Object {
                        "Href": "https://d1xkhapf8f3lxw.cloudfront.net/api/images/CardShop/1/product/ll037",
                        "Method": "GET",
                        "Rel": "self",
                        "Title": "17715",
                      },
                      "MimeType": "image/jpeg",
                    },
                    "ProductLink": Object {
                      "Href": "https://api-rest.moonpig.com/v2/products/ll037/1",
                      "Method": "GET",
                      "Rel": "self",
                      "Title": "17715",
                    },
                    "Reviews": Object {
                      "AverageStarReviewRating": 4.7561,
                      "MaxReviewData": 0,
                      "MinReviewData": 0,
                      "ReviewCount": 41,
                    },
                    "SeoPath": "champagne-bottle-personalised-congratulations-card",
                    "ShortDescription": null,
                    "SoldOut": 0,
                    "Title": "Champagne Bottle Personalised Congratulations Card",
                    "TradingFaces": 0,
                  }
                }
              />
            </Link>
          </div>,
          <div
            className="product-list--item"
          >
            <Link
              replace={false}
              to="/details/ll1064"
            >
              <ProductSummary
                product={
                  Object {
                    "CardShopId": 39,
                    "DefaultSizeId": 1,
                    "DirectSmile": true,
                    "IsCustomisable": 1,
                    "IsLandscape": 1,
                    "IsMultipack": 0,
                    "MoonpigProductNo": "ll1064",
                    "PhotoUploadCount": 0,
                    "Price": Object {
                      "Currency": "$",
                      "Value": 6.59,
                    },
                    "ProductCategory": Object {
                      "Name": "greeting cards",
                      "ProductCategoryId": 1,
                    },
                    "ProductCategoryGroupSeoPath": "personalised-cards/",
                    "ProductId": 51500,
                    "ProductImage": Object {
                      "Link": Object {
                        "Href": "https://d1xkhapf8f3lxw.cloudfront.net/api/images/CardShop/39/product/ll1064",
                        "Method": "GET",
                        "Rel": "self",
                        "Title": "51500",
                      },
                      "MimeType": "image/jpeg",
                    },
                    "ProductLink": Object {
                      "Href": "https://api-rest.moonpig.com/v2/products/ll1064/1",
                      "Method": "GET",
                      "Rel": "self",
                      "Title": "51500",
                    },
                    "Reviews": Object {
                      "AverageStarReviewRating": 4.9167,
                      "MaxReviewData": 0,
                      "MinReviewData": 0,
                      "ReviewCount": 12,
                    },
                    "SeoPath": "grapes-and-personalised-champagne-well-done-card",
                    "ShortDescription": null,
                    "SoldOut": 0,
                    "Title": "Grapes And Personalised Champagne Well Done Card",
                    "TradingFaces": 0,
                  }
                }
              />
            </Link>
          </div>,
        ],
        "className": "product-list--container",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": "ll037",
          "nodeType": "host",
          "props": Object {
            "children": <Link
              replace={false}
              to="/details/ll037"
            >
              <ProductSummary
                product={
                  Object {
                    "CardShopId": 1,
                    "DefaultSizeId": 1,
                    "DirectSmile": true,
                    "IsCustomisable": 1,
                    "IsLandscape": 0,
                    "IsMultipack": 0,
                    "MoonpigProductNo": "ll037",
                    "PhotoUploadCount": 0,
                    "Price": Object {
                      "Currency": "£",
                      "Value": 3.29,
                    },
                    "ProductCategory": Object {
                      "Name": "greeting cards",
                      "ProductCategoryId": 1,
                    },
                    "ProductCategoryGroupSeoPath": "personalised-cards/",
                    "ProductId": 17715,
                    "ProductImage": Object {
                      "Link": Object {
                        "Href": "https://d1xkhapf8f3lxw.cloudfront.net/api/images/CardShop/1/product/ll037",
                        "Method": "GET",
                        "Rel": "self",
                        "Title": "17715",
                      },
                      "MimeType": "image/jpeg",
                    },
                    "ProductLink": Object {
                      "Href": "https://api-rest.moonpig.com/v2/products/ll037/1",
                      "Method": "GET",
                      "Rel": "self",
                      "Title": "17715",
                    },
                    "Reviews": Object {
                      "AverageStarReviewRating": 4.7561,
                      "MaxReviewData": 0,
                      "MinReviewData": 0,
                      "ReviewCount": 41,
                    },
                    "SeoPath": "champagne-bottle-personalised-congratulations-card",
                    "ShortDescription": null,
                    "SoldOut": 0,
                    "Title": "Champagne Bottle Personalised Congratulations Card",
                    "TradingFaces": 0,
                  }
                }
              />
            </Link>,
            "className": "product-list--item",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <ProductSummary
                product={
                  Object {
                    "CardShopId": 1,
                    "DefaultSizeId": 1,
                    "DirectSmile": true,
                    "IsCustomisable": 1,
                    "IsLandscape": 0,
                    "IsMultipack": 0,
                    "MoonpigProductNo": "ll037",
                    "PhotoUploadCount": 0,
                    "Price": Object {
                      "Currency": "£",
                      "Value": 3.29,
                    },
                    "ProductCategory": Object {
                      "Name": "greeting cards",
                      "ProductCategoryId": 1,
                    },
                    "ProductCategoryGroupSeoPath": "personalised-cards/",
                    "ProductId": 17715,
                    "ProductImage": Object {
                      "Link": Object {
                        "Href": "https://d1xkhapf8f3lxw.cloudfront.net/api/images/CardShop/1/product/ll037",
                        "Method": "GET",
                        "Rel": "self",
                        "Title": "17715",
                      },
                      "MimeType": "image/jpeg",
                    },
                    "ProductLink": Object {
                      "Href": "https://api-rest.moonpig.com/v2/products/ll037/1",
                      "Method": "GET",
                      "Rel": "self",
                      "Title": "17715",
                    },
                    "Reviews": Object {
                      "AverageStarReviewRating": 4.7561,
                      "MaxReviewData": 0,
                      "MinReviewData": 0,
                      "ReviewCount": 41,
                    },
                    "SeoPath": "champagne-bottle-personalised-congratulations-card",
                    "ShortDescription": null,
                    "SoldOut": 0,
                    "Title": "Champagne Bottle Personalised Congratulations Card",
                    "TradingFaces": 0,
                  }
                }
              />,
              "replace": false,
              "to": "/details/ll037",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "product": Object {
                  "CardShopId": 1,
                  "DefaultSizeId": 1,
                  "DirectSmile": true,
                  "IsCustomisable": 1,
                  "IsLandscape": 0,
                  "IsMultipack": 0,
                  "MoonpigProductNo": "ll037",
                  "PhotoUploadCount": 0,
                  "Price": Object {
                    "Currency": "£",
                    "Value": 3.29,
                  },
                  "ProductCategory": Object {
                    "Name": "greeting cards",
                    "ProductCategoryId": 1,
                  },
                  "ProductCategoryGroupSeoPath": "personalised-cards/",
                  "ProductId": 17715,
                  "ProductImage": Object {
                    "Link": Object {
                      "Href": "https://d1xkhapf8f3lxw.cloudfront.net/api/images/CardShop/1/product/ll037",
                      "Method": "GET",
                      "Rel": "self",
                      "Title": "17715",
                    },
                    "MimeType": "image/jpeg",
                  },
                  "ProductLink": Object {
                    "Href": "https://api-rest.moonpig.com/v2/products/ll037/1",
                    "Method": "GET",
                    "Rel": "self",
                    "Title": "17715",
                  },
                  "Reviews": Object {
                    "AverageStarReviewRating": 4.7561,
                    "MaxReviewData": 0,
                    "MinReviewData": 0,
                    "ReviewCount": 41,
                  },
                  "SeoPath": "champagne-bottle-personalised-congratulations-card",
                  "ShortDescription": null,
                  "SoldOut": 0,
                  "Title": "Champagne Bottle Personalised Congratulations Card",
                  "TradingFaces": 0,
                },
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": [Function],
          },
          "type": "div",
        },
        Object {
          "instance": null,
          "key": "ll1064",
          "nodeType": "host",
          "props": Object {
            "children": <Link
              replace={false}
              to="/details/ll1064"
            >
              <ProductSummary
                product={
                  Object {
                    "CardShopId": 39,
                    "DefaultSizeId": 1,
                    "DirectSmile": true,
                    "IsCustomisable": 1,
                    "IsLandscape": 1,
                    "IsMultipack": 0,
                    "MoonpigProductNo": "ll1064",
                    "PhotoUploadCount": 0,
                    "Price": Object {
                      "Currency": "$",
                      "Value": 6.59,
                    },
                    "ProductCategory": Object {
                      "Name": "greeting cards",
                      "ProductCategoryId": 1,
                    },
                    "ProductCategoryGroupSeoPath": "personalised-cards/",
                    "ProductId": 51500,
                    "ProductImage": Object {
                      "Link": Object {
                        "Href": "https://d1xkhapf8f3lxw.cloudfront.net/api/images/CardShop/39/product/ll1064",
                        "Method": "GET",
                        "Rel": "self",
                        "Title": "51500",
                      },
                      "MimeType": "image/jpeg",
                    },
                    "ProductLink": Object {
                      "Href": "https://api-rest.moonpig.com/v2/products/ll1064/1",
                      "Method": "GET",
                      "Rel": "self",
                      "Title": "51500",
                    },
                    "Reviews": Object {
                      "AverageStarReviewRating": 4.9167,
                      "MaxReviewData": 0,
                      "MinReviewData": 0,
                      "ReviewCount": 12,
                    },
                    "SeoPath": "grapes-and-personalised-champagne-well-done-card",
                    "ShortDescription": null,
                    "SoldOut": 0,
                    "Title": "Grapes And Personalised Champagne Well Done Card",
                    "TradingFaces": 0,
                  }
                }
              />
            </Link>,
            "className": "product-list--item",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <ProductSummary
                product={
                  Object {
                    "CardShopId": 39,
                    "DefaultSizeId": 1,
                    "DirectSmile": true,
                    "IsCustomisable": 1,
                    "IsLandscape": 1,
                    "IsMultipack": 0,
                    "MoonpigProductNo": "ll1064",
                    "PhotoUploadCount": 0,
                    "Price": Object {
                      "Currency": "$",
                      "Value": 6.59,
                    },
                    "ProductCategory": Object {
                      "Name": "greeting cards",
                      "ProductCategoryId": 1,
                    },
                    "ProductCategoryGroupSeoPath": "personalised-cards/",
                    "ProductId": 51500,
                    "ProductImage": Object {
                      "Link": Object {
                        "Href": "https://d1xkhapf8f3lxw.cloudfront.net/api/images/CardShop/39/product/ll1064",
                        "Method": "GET",
                        "Rel": "self",
                        "Title": "51500",
                      },
                      "MimeType": "image/jpeg",
                    },
                    "ProductLink": Object {
                      "Href": "https://api-rest.moonpig.com/v2/products/ll1064/1",
                      "Method": "GET",
                      "Rel": "self",
                      "Title": "51500",
                    },
                    "Reviews": Object {
                      "AverageStarReviewRating": 4.9167,
                      "MaxReviewData": 0,
                      "MinReviewData": 0,
                      "ReviewCount": 12,
                    },
                    "SeoPath": "grapes-and-personalised-champagne-well-done-card",
                    "ShortDescription": null,
                    "SoldOut": 0,
                    "Title": "Grapes And Personalised Champagne Well Done Card",
                    "TradingFaces": 0,
                  }
                }
              />,
              "replace": false,
              "to": "/details/ll1064",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "product": Object {
                  "CardShopId": 39,
                  "DefaultSizeId": 1,
                  "DirectSmile": true,
                  "IsCustomisable": 1,
                  "IsLandscape": 1,
                  "IsMultipack": 0,
                  "MoonpigProductNo": "ll1064",
                  "PhotoUploadCount": 0,
                  "Price": Object {
                    "Currency": "$",
                    "Value": 6.59,
                  },
                  "ProductCategory": Object {
                    "Name": "greeting cards",
                    "ProductCategoryId": 1,
                  },
                  "ProductCategoryGroupSeoPath": "personalised-cards/",
                  "ProductId": 51500,
                  "ProductImage": Object {
                    "Link": Object {
                      "Href": "https://d1xkhapf8f3lxw.cloudfront.net/api/images/CardShop/39/product/ll1064",
                      "Method": "GET",
                      "Rel": "self",
                      "Title": "51500",
                    },
                    "MimeType": "image/jpeg",
                  },
                  "ProductLink": Object {
                    "Href": "https://api-rest.moonpig.com/v2/products/ll1064/1",
                    "Method": "GET",
                    "Rel": "self",
                    "Title": "51500",
                  },
                  "Reviews": Object {
                    "AverageStarReviewRating": 4.9167,
                    "MaxReviewData": 0,
                    "MinReviewData": 0,
                    "ReviewCount": 12,
                  },
                  "SeoPath": "grapes-and-personalised-champagne-well-done-card",
                  "ShortDescription": null,
                  "SoldOut": 0,
                  "Title": "Grapes And Personalised Champagne Well Done Card",
                  "TradingFaces": 0,
                },
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": [Function],
          },
          "type": "div",
        },
      ],
      "type": "section",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;
